app/scss/_skills.scss
.skills {
  padding-top: 40px;
  margin-top: -40px;
}

.skills-box {
  min-height: 51.4rem;
}

.skills-grid {
  display: grid;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
  grid-template-rows: repeat(auto-fill, minmax(10rem, 1fr));
  @include breakpoint-down(small) {
    grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
    grid-template-rows: repeat(auto-fill, minmax(8rem, 1fr));
  }
}

.skills-grid-cell {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  @include breakpoint-up(medium) {
    transition: transform 150ms ease-in-out;
    &:hover {
      transform: scale(1.2);
    }
  }
}

.skills-text {
  font-size: $font-medlrg;
  font-weight: 300;
  color: var(--font-color);
}

.skills-icon {
  border-radius: 5px;
  height: 5rem;
  width: auto;
  &.semi-wide-skill {
    scale: 0.9;
  }
  &.wide-skill {
    scale: 0.65;
  }
  @include breakpoint-down(xsmall) {
    height: 4rem;
  }
}

.marked {
  &.invert {
    filter: invert(1);
  }
}

.aws {
  &.top {
    position: relative;
    filter: invert(1);
    clip-path: inset(0 0 35px 0);
  }
  &.bottom {
    position: absolute;
    top: 0;
    clip-path: inset(45px 0 10px 0);
  }
}

.button-signature-wrapper {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
}

.signature {
  font-family: "Corinthia", cursive;
  font-size: $font-xlg;
  color: var(--font-color);
  font-weight: 700;
  margin: 0;
  padding: 1rem 0;
  @include breakpoint-down(small) {
    font-size: $font-lrg;
  }
}

.skills-line {
  border: 1px solid var(--bg-color-main);
  border-radius: 5px;
  margin-top: 3rem;
  margin-bottom: 1rem;
}

